--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,6 +20,12 @@
 }
 
 #root {
-  max-width: 1000px;
+  max-width: 980px;
   margin: 0 auto;
+}
+
+@media (min-width: 640px) {
+  #root {
+    padding: 20px;
+  }
 }
